css/main.css
body {
  font-family: 'effra', sans-serif;
}

h1 {
 color: #01a0bc;
 font-size: 14px;
 font-weight: 500;
 margin-bottom: 0px;
}

h2 {
 color: #797879;
 font-size: 10px;
 font-weight: 500;
 text-transform: uppercase;
 letter-spacing: .5px;
  margin-top: 5px;
   margin-bottom: 0px;
}

p {
 color: #797879;
 font-size: 10px;
 margin-top: 0px;
 margin-bottom: 0px;
  font-weight: 400;
   letter-spacing: .25px;
}

.identifier {
 color: #01a0bc;
  font-weight: 500;
}

img {
  max-width: 120px;
  margin-top: 10px;
  margin-bottom: 10px;
}

a {
  text-decoration: none;
  color: #797879;
}

#line {
  border-bottom: .5px solid #797879;
  max-width: 75px;
}

